# Sancara

./: .gitignore  AGENTS.md  LICENSE  README.md  api.py  pyproject.toml  requirements.txt  train.py
.github/workflows/: ci.yml
data/: junction_centrality.csv  junction_vulnerability.csv  predictions_log.csv
frontend/: package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/autopsy/: page.tsx
frontend/src/app/broadcast/: page.tsx
frontend/src/app/calendar/: page.tsx
frontend/src/app/chatbot/: page.tsx
frontend/src/app/corridors/: page.tsx
frontend/src/app/heatmap/: page.tsx
frontend/src/app/hotspots/: page.tsx
frontend/src/app/planned/: page.tsx
frontend/src/app/predict/: page.tsx
frontend/src/app/resources/: page.tsx
frontend/src/app/similarity/: page.tsx
frontend/src/app/simulator/: page.tsx
frontend/src/app/vulnerability/: page.tsx
frontend/src/components/: Sidebar.tsx  TourGuide.tsx
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
models/: cascade_calibrator.pkl  cascade_classifier.pkl  encoders.pkl  hotspots.pkl  impact_classifier.pkl  metrics.json  network.pkl  prolonged_classifier.pkl  resolution_regressor.pkl  resolution_regressor.ubj  similarity.pkl
src/: black_box.py  cascade_autopsy.py  digital_twin.py  early_warning.py  explain.py  feature_engineering.py  hotspot_detection.py  knowledge_graph.py  models.py  network.py  post_event.py  resources.py  similarity.py  ttf.py  vulnerability.py
tests/: test_api.py
